--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,5 +3,5 @@ sonar.projectName=Dex2Hex
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.java.binaries=target/classes
-sonar.host.url=http://localhost:9000
+sonar.host.url=http://107.23.146.108:9000
 sonar.login=squ_9ab3afbf3c71491f8a91bac14f3d6c53bf6d6de5
