--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,3 @@
-sonar.projectKey=your_project_key
-sonar.projectName=Dex2HexProject
-sonar.projectVersion=1.0
-sonar.sources=src
-sonar.java.binaries=target
+sonar.projectKey=java-jenkins-sonar
+sonar.sources=.
 
